--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
@@ -279,7 +279,7 @@
                                    settings.Properties.Columns.Add("ba_descripcion", "Banco").Width = System.Web.UI.WebControls.Unit.Percentage(50);
                                    //Campo ID
                                    settings.Properties.ValueField = "IdBanco";
-                                   settings.Properties.ValueType = typeof(string);
+                                   settings.Properties.ValueType = typeof(int);
                                    settings.Properties.TextField = "ba_descripcion";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
