--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Index.cshtml
@@ -12,6 +12,7 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q=>q.IdEmpresa)
     <div class="box">
         <div class="box-header with-border">
             <div class="row">
