--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque.cshtml
@@ -97,6 +97,7 @@
         });
         settings.Columns.Add("IdCbteCble", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add("cb_Cheque", "# Cheque").Width = Unit.Percentage(10);
+        settings.Columns.Add("ba_descripcion", "Cuenta").Width = Unit.Percentage(20);
         settings.Columns.Add("cb_giradoA", "Beneficiario").Width = Unit.Percentage(40);
         settings.Columns.Add(column =>
         {
