--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Modificar.cshtml
@@ -14,10 +14,10 @@
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdSucursal)
-    @Html.HiddenFor(q => q.IdBodega)
     @Html.HiddenFor(q => q.IdNumMovi)
     @Html.HiddenFor(q => q.signo)
     @Html.HiddenFor(q => q.IdMovi_inven_tipo)
+    @Html.HiddenFor(q => q.IdBodega, new { @id = "IdBodegaInfo" })
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -123,40 +123,40 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
-
-
 <script type="text/javascript">
-
-        $(function () {
-            CargarBodega();
-            $("#IdSucursal").change(function () {
-                CargarBodega();
-            });
-        });
+$(function () {
+    CargarBodega();
+    $("#IdSucursal").change(function () {
+        CargarBodega();
+    });
+});
 function CargarBodega() {
-        $("#IdBodega").empty();
+    $("#IdBodega").empty();
+    var IdBodegaInfo = $("#IdBodegaInfo").val();
+    var datos = {
+        IdEmpresa: $("#IdEmpresa").val(),
+        IdSucursal: $("#IdSucursal").val()
+    }
 
-        var datos = {
-            IdEmpresa: $("#IdEmpresa").val(),
-            IdSucursal: $("#IdSucursal").val()
-        }
-
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("CargarBodega", "IngresoInventario", new { Area = "Inventario" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
+    $.ajax({
+        type: 'POST',
+        data: JSON.stringify(datos),
+        url: '@Url.Action("CargarBodega", "IngresoInventario", new { Area = "Inventario" })',
+        async: false,
+        bDeferRender: true,
+        bProcessing: true,
+        dataType: 'json',
+        contentType: 'application/json; charset=utf-8',
+        success: function (data) {
             $.each(data, function (i, row) {
             $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
             });
-            },
-            error: function (error) {
-            }
-            });
-    };
+
+            $("#IdBodega").val(IdBodegaInfo);
+        },
+        error: function (error)
+        {
+        }
+    });
+};
 </script>
