--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia.cshtml
@@ -89,7 +89,7 @@
         settings.Columns.Add("NombreProceso", "Archivo").Width = Unit.Percentage(8);
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(15);
 
-        
+
         settings.Columns.Add(column =>
         {
             column.FieldName = "pe_FechaIni";
@@ -131,7 +131,7 @@
         {
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_020", "RRHHReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdNominaTipo = DataBinder.Eval(c.DataItem, "IdNominaTipo").ToString(), IdNomina = DataBinder.Eval(c.DataItem, "IdNomina").ToString(), IdPeriodo = DataBinder.Eval(c.DataItem, "IdPeriodo").ToString(), IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal").ToString(), IdProceso_bancario_tipo= DataBinder.Eval(c.DataItem, "IdProceso_bancario_tipo").ToString() }, Request.Url.Scheme) + "');\"></span>");
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_020", "RRHHReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdNominaTipo = DataBinder.Eval(c.DataItem, "IdNominaTipo").ToString(), IdNomina = DataBinder.Eval(c.DataItem, "IdNomina").ToString(), IdPeriodo = DataBinder.Eval(c.DataItem, "IdPeriodo").ToString(), IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal").ToString(), IdProceso_bancario_tipo = DataBinder.Eval(c.DataItem, "IdProceso_bancario_tipo").ToString() }, Request.Url.Scheme) + "');\"></span>");
 
             });
             column.Width = Unit.Percentage(5);
