--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/_GridViewPartial_prestamos_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/_GridViewPartial_prestamos_det.cshtml
@@ -55,8 +55,6 @@
             });
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
-
-
         settings.Columns.Add(column =>
         {
             column.FieldName = "FechaPago";
@@ -67,20 +65,6 @@
             {
                 column.PropertiesEdit.DisplayFormatString = "d";
                 sp.Width = Unit.Percentage(100);
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "TotalCuota";
-            column.Caption = "$Valor cuota";
-            column.Width = Unit.Percentage(15);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
-                column.PropertiesEdit.DisplayFormatString = "n2";
-
             });
         });
         settings.Columns.Add(column =>
@@ -128,8 +112,22 @@
             column.EditFormSettings.Visible = DefaultBoolean.False;
 
         });
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "TotalCuota");
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "TotalCuota";
+            column.Caption = "$Valor cuota";
+            column.Width = Unit.Percentage(15);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+                column.PropertiesEdit.DisplayFormatString = "n2";
 
+            });
+        });
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "TotalCuota");
+        settings.Settings.ShowFooter = true;
     });
 }
     @grid.Bind(Model).GetHtml()
