--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
@@ -60,6 +60,7 @@
             //}
         };
 
+        settings.Columns.Add("IdRol", "ID").Width = Unit.Percentage(3);
 
         settings.Columns.Add(c =>
         {
