--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeCreditoBanco/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeCreditoBanco/Anular.cshtml
@@ -142,6 +142,12 @@
                     @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="cb_Valor">Valor</label>
+                    @Html.TextBoxFor(q => q.cb_Valor, new { @id = "cb_Valor", @class = "form-control", @disabled = "disabled" })
+                </div>
+            </div>
         </div>
     </div>
 
