--- a/ERP/Core.Erp.Web/Views/Layout/_LayoutConsulta.cshtml
+++ b/ERP/Core.Erp.Web/Views/Layout/_LayoutConsulta.cshtml
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="~/AdminLTE/dist/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="~/AdminLTE/dist/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="~/AdminLTE/dist/css/skins/skin-green-light.min.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -57,7 +57,7 @@
             new Script { ExtensionSuite = ExtensionSuite.TreeList }
         )
 </head>
-<body class="skin-blue layout-top-nav">
+<body class="skin-green-light layout-top-nav">
     <div class="wrapper">
         <header class="main-header">
 
