--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/AjustesAnticipo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/AjustesAnticipo/Index.cshtml
@@ -30,6 +30,16 @@
         </div>
         <div class="box-body">
 
+            <div class="col-md-12">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="IdSucursal">Sucursal*</label>
+                        @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
+                        @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-md-12">
@@ -140,8 +150,10 @@
     function cargar_periodos_x_nomina() {
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val(),
             IdNomina: $("#IdNomina_Tipo").val(),
             IdNomina_Tipo: $("#IdNomina_TipoLiqui").val()
+            
         }
 
         $.ajax({
