--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Modificar.cshtml
@@ -10,6 +10,36 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 <script type="text/javascript">
 
+    $(function() {
+        $("#IdSucursal").change(function () {
+            GetListBancoPorSucursal();
+        });
+    })
+
+    function GetListBancoPorSucursal() {
+        $("#IdBanco").empty();
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetListBancoPorSucursal", "BancoCuenta",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdBanco").append("<option value=" + row.IdBanco + ">" + row.ba_descripcion+ "</option>");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    }
     var selectedIDs;
     function OnBeginCallback(s, e) {
         e.customArgs["selectedIDs"] = selectedIDs;
@@ -40,11 +70,11 @@
                 if (data.GiradoA.length > 0) {
                     $("#cb_giradoA").val(data.GiradoA);
                     $("#cb_Observacion").val(data.Observacion);
-                } 
+                }
             },
             error: function (error) {
             }
-        });      
+        });
     }
 
   function MostrarModal() {
@@ -70,7 +100,7 @@
             },
             error: function (error) {
             }
-        });        
+        });
     }
 
     function AddOP() {
