--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
@@ -21,8 +21,37 @@
             IdEntidad.SetValue(null);
             $("#cb_giradoA").val("");
         });
+        $("#IdSucursal").change(function () {
+            GetListBancoPorSucursal();
+        });
         GetNumCheque();
     });
+
+    function GetListBancoPorSucursal() {
+        $("#IdBanco").empty();
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetListBancoPorSucursal", "BancoCuenta",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdBanco").append("<option value=" + row.IdBanco + ">" + row.ba_descripcion+ "</option>");
+                });                
+            },
+            error: function (error) {
+            }
+        });
+    }
+
     var selectedIDs;
     function OnBeginCallback(s, e) {
         e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
