--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Anular.cshtml
@@ -14,7 +14,34 @@
         $("#IdBanco").change(function () {
             armar_diario();
         });
+        $("#IdSucursal").change(function () {
+            GetListBancoPorSucursal();
+        });
     });
+function GetListBancoPorSucursal() {
+        $("#IdBanco").empty();
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetListBancoPorSucursal", "BancoCuenta",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdBanco").append("<option value=" + row.IdBanco + ">" + row.ba_descripcion+ "</option>");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    }
     var selectedIDs;
     function OnBeginCallback(s, e) {
         e.customArgs["selectedIDs"] = selectedIDs;
@@ -62,7 +89,7 @@
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
             IdBanco: $("#IdBanco").val(),
-            IdTransaccionSession: $("#IdTransaccionSession").val()            
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
